[project]
name = "llm-zoomcamp-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minsearch>=0.2.0",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "tokenizers>=0.23.1",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.22.0",
    "jupyter>=1.1.1",
]
